--- a/pantallas/index.html
+++ b/pantallas/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./css/configuracion.css">
+    <link rel="stylesheet" href="./css/item.css">
 
 </head>
 <body>
