se agrega el ejercicio de tarjetas

--- a/componentes/index.html
+++ b/componentes/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./css/configuracion.css">
-    <link rel="stylesheet" href="./css/item.css">
-
+    <!-- Archivos CSS -->
+    <link rel="stylesheet" href="./css/configuraciones.css">
+    <link rel="stylesheet" href="./css/tarjeta.css">
 </head>
 <body>
     
-    <main id="root">
-        <div id="galeria"></div>
-        <!-- Agregar todo el contenido -->
-    </main>
+    <div id="root">
+        <!-- Componentes -->
+    </div>
 
     <script src="./js/main.js" type="module"></script>
 </body>
